# instagram-like

./: .gitignore  README.md  comment.py  comments.json  cookie_manager.py  cookies-convertor.py  cookies.json  extracted_params.json  helpers.py  instagram.py  instagram_page.html  likers.json  login.py  m.txt  main.py  mongo.py  output.json  page.html  pyproject.toml  raw-cookies.json  req.py  request_service.py  send-like.py  temp.py  test.html  test.py  update_params.py
actions/: comment.py  instagram.py  like.py  likers.py  login.py
database/: connection.py  repositories.py
models/: auth.py  cookies.py  liker.py  likers.py  models.py  parameters.py  target_user.py  user.py
services/: cookie_manager.py  instagram.py  liker.py  likers.py  update_params.py
tests/: test_check_cookies.py  test_check_parameters.py  test_extract_media_id.py  test_get_latest_post_id.py  test_ig.py  test_liker.py  test_login.py  test_update_params.py
utils/: helpers.py  request_service.py
