[project]
name = "instagram-like"
version = "0.1.0"
description = ""
authors = [
    {name = "Alireza"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "selenium (>=4.28.1,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "playwright (>=1.49.1,<2.0.0)",
    "requests-html (>=0.10.0,<0.11.0)",
    "lxml-html-clean (>=0.4.1,<0.5.0)",
    "lxml[html-clean] (>=5.3.0,<6.0.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "pymongo (>=4.11,<5.0)",
    "brotli (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
